# airplay2tv

./: .gitignore  AGENTS.md  LICENSE.MIT.md  README.md  pip_requirements.txt  pyproject.toml  stream.py
HomebrewFormula/: airplay2tv.rb
airplay2tv/: __init__.py  __main__.py  app.py  cli.py  config.py  credentials.py  devicepick.py  doctor.py  errors.py  httpserver.py  logging_setup.py  media.py  netutil.py  pairing.py
airplay2tv/backends/: __init__.py  airplay.py  base.py  registry.py  roku_ecp.py
airplay2tv/discovery/: __init__.py  aggregate.py  discovery_result.py  roku_ssdp.py
devel/: proof_airplay.py  proof_roku.py
docs/: CHANGELOG.md  CODE_ARCHITECTURE.md  FILE_STRUCTURE.md  INSTALL.md  TROUBLESHOOTING.md  USAGE.md
docs/active_plans/audits/: airplay2tv_edge_case_audit.md
docs/active_plans/reports/: airplay2tv_build_summary.md  airplay2tv_m1_proof.md
tests/: conftest.py  test_airplay_backend.py  test_app_cleanup.py  test_app_flow.py  test_app_flow_fakebackend.py  test_backend_contract.py  test_cli.py  test_config.py  test_credentials.py  test_discovery_merge.py  test_doctor.py  test_httpserver.py  test_media.py  test_media_decision.py  test_netutil.py  test_pairing_fakebackend.py  test_registry.py  test_roku_ecp.py  test_roku_ssdp.py
tests/e2e/: e2e_debian_smoke.py  e2e_entry_smoke.sh  e2e_headless_pair_play.py  e2e_httpserver.py  e2e_make_fixtures.py  e2e_media_prepare.py  e2e_roku_ecp.py
